[tool.poetry]
name = "covid-wastewater"
version = "0.1.0"
description = ""
authors = ["Cypress Frankenfeld <iamcypress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
altair = "^4.2.0"
camelot-py = "^0.10.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
